Fixing spacing in login and register pages

--- a/client/src/CSS_files/Body.css
+++ b/client/src/CSS_files/Body.css
@@ -12,7 +12,16 @@
     justify-content: center;
     align-items: center;
     margin: 1vh;
-    margin-top: 20vh;
+    margin-top: 10vh;
+}
+
+.lesson-menu{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 1vh;
+    margin-top: 10vh;
 }
 
 .Toolbox-Toggle-Button{
